--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.mpfinal.mp_final/com.mpfinal.mp_final.HelloApplication</mainClass>
+                            <mainClass>com.mpfinal.mp_final/com.mpfinal.mp_final.MainMenu</mainClass>
                         </configuration>
                     </execution>
                 </executions>
